--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Babel==0.9.6
 Flask==0.9
+Flask-Assets==0.8
 Flask-Babel==0.8
 Flask-Cache==0.9.0
 Flask-Login==0.1.3
@@ -8,10 +9,19 @@ Flask-SQLAlchemy==0.16
 Flask-Script==0.5.1
 Flask-WTF==0.8
 Jinja2==2.6
+MySQL-python==1.2.4b5
+PIL==1.1.7
 SQLAlchemy==0.7.9
 WTForms==1.0.2
 Werkzeug==0.8.3
 blinker==1.2
+html5lib==0.95
+jsmin==2.0.2
+pyPdf==1.13
 pytz==2012g
+reportlab==2.6
 speaklater==1.3
+sqlautocode==0.7
+webassets==0.8
 wsgiref==0.1.2
+yuicompressor==2.4.7
