--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,27 @@ Flask-SQLAlchemy==0.16
 Flask-Script==0.5.1
 Flask-WTF==0.8
 Jinja2==2.6
+Mako==0.7.3
+MarkupSafe==0.15
 MySQL-python==1.2.4b5
 PIL==1.1.7
 SQLAlchemy==0.7.9
 WTForms==1.0.2
 Werkzeug==0.8.3
+alembic==0.4.1
 blinker==1.2
+gocardless==0.2.1
 html5lib==0.95
+ipython==0.13.2
 jsmin==2.0.2
+py-bcrypt==0.2
 pyPdf==1.13
 pytz==2012g
 reportlab==2.6
+requests==1.2.3
 speaklater==1.3
 sqlautocode==0.7
+stripe==1.9.1
 webassets==0.8
 wsgiref==0.1.2
 yuicompressor==2.4.7
