--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,6 @@
 
 # application server
-upstream py_app_server {
+upstream nano_app_server {
   server unix:/tmp/uwsgi.nanoinvoice.com.socket;
 }
 
@@ -20,7 +20,7 @@ server {
   }
   
   location @proxy_to_app {
-    uwsgi_pass py_app_server;
+    uwsgi_pass nano_app_server;
     include uwsgi_params;
   }
 }
