--- a/conf/supervisord.ini
+++ b/conf/supervisord.ini
@@ -1,4 +1,4 @@
-[program:holiday_home_srilanka]
+[program:nanoinvoice]
 command=/var/www/nanoinvoice.com/venv/bin/uwsgi --ini /var/www/nanoinvoice.com/conf/uwsgi.ini
 directory=/var/www/nanoinvoice.com
 autostart=true
