--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -3,6 +3,6 @@
 socket = /tmp/uwsgi.nanoinvoice.com.socket
 processes = 2
 module = app:app
-pythonpath = /var/www/nanoinvoice.com
+pythonpath = /var/www/nanoinvoice.com/nano/
 virtualenv = /var/www/nanoinvoice.com/venv/
 pidfile=/tmp/uwsgi.nanoinvoice.com.pid
