--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Babel==0.9.6
+Fabric==1.8.1
 Flask==0.9
 Flask-Assets==0.8
 Flask-Babel==0.8
@@ -17,13 +18,17 @@ SQLAlchemy==0.7.9
 WTForms==1.0.2
 Werkzeug==0.8.3
 alembic==0.4.1
+argparse==1.2.1
 blinker==1.2
+ecdsa==0.10
 gocardless==0.2.1
 html5lib==0.95
 ipython==0.13.2
 jsmin==2.0.2
+paramiko==1.12.0
 py-bcrypt==0.2
 pyPdf==1.13
+pycrypto==2.6.1
 pytz==2012g
 reportlab==2.6
 requests==1.2.3
