--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -2,7 +2,7 @@
 ;http = 127.0.0.1:3032
 socket = /tmp/uwsgi.nanoinvoice.com.socket
 processes = 2
-module = app:app
-pythonpath = /var/www/nanoinvoice.com/nano/
+module = web:app
+pythonpath = /var/www/nanoinvoice.com/nano
 virtualenv = /var/www/nanoinvoice.com/venv/
 pidfile=/tmp/uwsgi.nanoinvoice.com.pid
