--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Werkzeug==0.8.3
 alembic==0.4.1
 argparse==1.2.1
 blinker==1.2
+distribute==0.7.3
 ecdsa==0.10
 gocardless==0.2.1
 html5lib==0.95
@@ -35,6 +36,7 @@ requests==1.2.3
 speaklater==1.3
 sqlautocode==0.7
 stripe==1.9.1
+uWSGI==2.0
 webassets==0.8
 wsgiref==0.1.2
 yuicompressor==2.4.7
