--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,8 +1,9 @@
 [uwsgi]
-;http = 127.0.0.1:3032
 socket = /tmp/uwsgi.nanoinvoice.com.socket
 processes = 2
 module = web:app
 pythonpath = /var/www/nanoinvoice.com/nano
 virtualenv = /var/www/nanoinvoice.com/venv/
 pidfile=/tmp/uwsgi.nanoinvoice.com.pid
+master=1
+
