--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ requests==1.2.3
 speaklater==1.3
 sqlautocode==0.7
 stripe==1.9.1
+uWSGI==2.0
 webassets==0.8
 wsgiref==0.1.2
 yuicompressor==2.4.7
