--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,9 +1,10 @@
 [uwsgi]
-socket = /tmp/uwsgi.nanoinvoice.com.socket
-processes = 2
-module = web:app
-pythonpath = /var/www/nanoinvoice.com/nano
-virtualenv = /var/www/nanoinvoice.com/venv/
+socket=/tmp/uwsgi.nanoinvoice.com.socket
+processes=2
+module=web:app
+pythonpath=/var/www/nanoinvoice.com/nano
+virtualenv=/var/www/nanoinvoice.com/venv/
 pidfile=/tmp/uwsgi.nanoinvoice.com.pid
 master=1
+touch-reload=/tmp/nano_uwsgi_restart
 
