--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 Babel==0.9.6
 Fabric==1.8.1
-Flask==0.9
+Flask==0.10.1
 Flask-Assets==0.8
 Flask-Babel==0.8
 Flask-Cache==0.9.0
-Flask-Login==0.1.3
+Flask-Login==0.2.10
 Flask-Mail==0.7.3
 Flask-SQLAlchemy==0.16
 Flask-Script==0.5.1
 Flask-WTF==0.8
-Jinja2==2.6
+Jinja2==2.7.2
 Mako==0.7.3
-MarkupSafe==0.15
+MarkupSafe==0.23
 MySQL-python==1.2.4b5
 PIL==1.1.7
-SQLAlchemy==0.7.9
+SQLAlchemy==0.9.4
 WTForms==1.0.2
-Werkzeug==0.8.3
+Werkzeug==0.9.4
 alembic==0.4.1
 argparse==1.2.1
 blinker==1.2
-distribute==0.7.3
 ecdsa==0.10
 gocardless==0.2.1
 html5lib==0.95
 ipython==0.13.2
+itsdangerous==0.24
 jsmin==2.0.2
 paramiko==1.12.0
 py-bcrypt==0.2
